# chronova-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  build-docker.sh  build.sh  chronova-cli-installer.sh  codemap.md  install-linux.sh  install-macos.sh  install-windows.ps1  release.config.js  test-config.cfg  test-config.json  test-local.cfg  test.chronova.cfg  test_sync.sh  test_sync_issue.sh  verify.sh
.github/release-tooling/: package.json  release.config.js
.github/workflows/: AGENTS.md  bot-review.yml  code-review.yml  omp-ci.yml  omp.yml  release.yml  test.yml  triage.yml
.omp/commands/: review-pr.md
.open-mem/: memory.db  memory.db-shm  memory.db-wal
.opencode/instructions/: AGENTS.md  llms.md
.slim/: AGENTS.md  cartography.json
.wiki/: .last-update-report.md  .last-updated.json  index.md  quickstart.md
docs/: AGENTS.md  ARCHITECTURE.md  editor-integration.md  migration-guide.md
docs/plans/: AGENTS.md  (+1 more)
openwiki/: .last-update.json  architecture.md  cli-and-config.md  heartbeat-flow.md  operations.md  quickstart.md  sync-and-offline.md  testing.md
src/: AGENTS.md  api.rs  cli.rs  collector.rs  config.rs  heartbeat.rs  lib.rs  logger.rs  main.rs  queue.rs  sync.rs  updater.rs  user_agent.rs
tests/: AGENTS.md  cli_offline_commands.rs  cli_parsing.rs  config_wakatime_compatibility.rs  error_recovery_test.rs  extra_heartbeats_test.rs  heartbeat_sync.rs  mod.rs  observability.rs  performance_test.rs  retry_mechanism_test.rs  sync_config.rs  wakatime_compatibility.rs  worktree_test.rs
(+20 files in other folders)
