[package]
name = "chronova-cli"
version = "0.1.0"
edition = "2021"
description = "A high-performance, drop-in replacement for wakatime-cli written in Rust"
authors = ["Chronova Team"]
license = "MIT"
repository = "https://github.com/chronova/chronova-cli"
readme = "README.md"

[[bin]]
name = "chronova-cli"
path = "src/main.rs"

[lib]
name = "chronova_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
configparser = "3.0"
dirs = "5.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }
lazy_static = "1.4"
gethostname = "0.4"
tracing-appender = "0.2"
base64 = "0.21"
rand = "0.8"
async-trait = "0.1"
sysinfo = "0.37.2"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"

[target.aarch64-apple-darwin]
image = "aarch64-apple-darwin-cross.local"
